--- a/HappyHotel4/HappyHoTel/HappyHoTel/appsettings.json
+++ b/HappyHotel4/HappyHoTel/HappyHoTel/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=(local);Server=JACKIELEIV\\SQLEXPRESS;Database=aspnet-HappyHoTel-B7F4ABA2-4737-4170-9858-848F2C599560;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data source=(local);Server=LAPTOP-2T95QSVP\\MSSQLSERVER01;Database=aspnet-HappyHoTel-B7F4ABA2-4737-4170-9858-848F2C599560;Trusted_Connection=True;MultipleActiveResultSets=true"
+
+    //"DefaultConnection": "Data source=(local);Server=JACKIELEIV\\SQLEXPRESS;Database=aspnet-HappyHoTel-B7F4ABA2-4737-4170-9858-848F2C599560;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
