addLotOf chuc nang
co thể lọc phiếu đặt phòng theo ngày, cmnd, tình trạng.
50% xử lí tạo phiếu đặt phòng,
Đã có thể xem chi tiết phiếu đặt phòng

--- a/26-11-2019/CaChepFinal2/CaChepFinal2/CaChepFinal2.csproj
+++ b/26-11-2019/CaChepFinal2/CaChepFinal2/CaChepFinal2.csproj
@@ -18,6 +18,10 @@
     <Compile Remove="Data\Migrations\20191125195738_khaibaodb.Designer.cs" />
     <Compile Remove="Data\Migrations\20191125204027_adddb.cs" />
     <Compile Remove="Data\Migrations\20191125204027_adddb.Designer.cs" />
+    <Compile Remove="Data\Migrations\20191125205039_adddb.cs" />
+    <Compile Remove="Data\Migrations\20191125205039_adddb.Designer.cs" />
+    <Compile Remove="Data\Migrations\20191126050859_ver2.cs" />
+    <Compile Remove="Data\Migrations\20191126050859_ver2.Designer.cs" />
   </ItemGroup>
 
 
